<resources>
    <string name="app_name">News</string>
    <string name="app_name_small">news</string>
    <string name="base_application">News</string>
    <string name="text_all_right_reserved">Ahlan Wa Sahlan</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="login">Masuk</string>
    <string name="lanjut">Lanjut</string>
    <string name="sign_up">Daftar</string>
    <string name="no_handphone">No. Handphone</string>
    <string name="password">Password</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="text_atau">Atau</string>
    <string name="sign_up_dengan_jejaring_sosial">Daftar dengan jejaring sosial</string>
    <string name="full_name">Nama lengkap tanpa gelar</string>
    <string name="email">Email</string>
    <string name="konfirmasi_password">Konfirmasi Password</string>
    <string name="have_account">Sudah punya akun?</string>
    <string name="enter_code">Masukkan Kode Verifikasi</string>
    <string name="username">Username</string>
    <string name="digitsPhone">1234567890</string>
    <string name="digitsUsername">asdfghjklqwertyuiopzxcvbnmASDFGHJKLQWERTYUIOPZXCVBNM_1234567890.</string>
    <string name="digitsEmail">asdfghjklqwertyuiopzxcvbnmASDFGHJKLQWERTYUIOPZXCVBNM_1234567890@.-</string>
    <string name="silahkan_pilih_jenis_akun_yang_akan_anda_buat">Silahkan pilih jenis akun yang akan Anda Buat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="keluar">Keluar</string>
    <string name="mohon_tunggu">Mohon Tunggu…</string>
    <string name="lewati">Lewati</string>
    <string name="verifikasi_akun">Verifikasi Akun</string>
    <string name="action_chat">Chat</string>
    <string name="action_notif">Notifikasi</string>
    <string name="action_filter">Filter</string>
    <string name="action_add">Tambah</string>
    <string name="action_share">Bagikan</string>
    <string name="menu_profile">Profil Saya</string>
    <string name="menu_kontak">Kontak</string>
    <string name="menu_pesan">Pesan</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="pengaturan_akun">Pengaturan Akun</string>
    <string name="pengaturan_privasi">Pengaturan Privasi</string>
    <string name="sign_out">Keluar</string>
    <string name="nama">Nama Lengkap</string>
    <string name="noHandphone">No. Handphone</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="laki_laki">Laki - Laki</string>
    <string name="perempuan">Perempuan</string>
    <string name="tempat_lahir">Tempat Lahir</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="alamat_domisili">Alamat Domisili</string>
    <string name="update">Simpan</string>
    <string name="gelar">Gelar</string>
    <string name="provinsi">Provinsi</string>
    <string name="strata_1_sarjana">Strata 1 (Sarjana)</string>
    <string name="nama_perguruan_tinggi">Nama perguruan tinggi</string>
    <string name="strata_2_magister">Strata 2 (Magister)</string>
    <string name="strata_3_doktor">Strata 3 (Doktor)</string>
    <string name="kota_perguruan_tinggi">Kota perguruan tinggi</string>
    <string name="tahun_tamat">Tahun tamat</string>
    <string name="jurusan_program_studi">Jurusan / program studi</string>
    <string name="gelar_akademik">Gelar Akademik</string>
    <string name="beranda">Beranda</string>
    <string name="privasi">Privasi</string>
    <string name="tambah_jenis_akun">Tambah Jenis Akun</string>
    <string name="hapus_jenis_akun">Nonaktifkan Akun</string>
    <string name="pusat_bantuan">Pusat Bantuan</string>
    <string name="tampilkan_alamat_saya">Tampilkan Alamat Saya</string>
    <string name="tampilkan_gelar_pendidikan">Tampilkan Gelar Pendidikan</string>
    <string name="tampilkan_lokasi_terkini_saya">Tampilkan Lokasi Saya</string>
    <string name="tampilkan_tempat_tanggal_lahir">Tampilkan tempat tanggal lahir</string>
    <string name="kecamatan">Kecamatan</string>
    <string name="kelurahan">Kelurahan</string>
    <string name="kabupaten_kota">Kabupaten / Kota</string>
    <string name="input_text">Input Text</string>
    <string name="tambah">Tambah</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="ganti_akun">Ganti Akun</string>
    <string name="alamat">Alamat</string>
    <string name="pick_alamt_kantor_di_map">Pick alamat kantor di map</string>
    <string name="alamat_rumah_jalan_perumahan_block_no">Alamat Rumah (Jalan, Perumahan, Block, No)</string>
    <string name="reset">Reset</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pick_alamat">Pick Alamat</string>
    <string name="silahkan_pick_alamat_anda">Silahkan pick alamat anda</string>
    <string name="tolak">TOLAK</string>
    <string name="terima">TERIMA</string>
    <string name="username_atau_no_handphone">Username atau No. Handphone</string>
    <string name="lokasi">Lokasi</string>
    <string name="navigasi">Navigasi</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="kecamatan_dan_kota">Kecamatan dan Kota</string>
    <string name="waktu">Waktu</string>
    <string name="tanggal">Tanggal</string>
    <string name="nomor_handphone_aktif">Nomor handphone aktif</string>
    <string name="cari">Cari</string>
    <string name="status">Status</string>
    <string name="belum">Belum</string>
    <string name="ya">Ya</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="ketikkan_pesan">Ketikkan pesan</string>
    <string name="message">message</string>
    <string name="anda">Anda</string>
    <string name="foto">Foto</string>
    <string name="admin">Admin</string>
    <string name="undescot">_</string>
    <string name="masukkan_kode">Masukkan kode</string>
    <string name="list_temp_data">List Temp Data</string>
    <string name="nama_kontak">Nama Kontak</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="register">Daftar</string>
    <string name="blank_fragment_1">Blank Fragment 1</string>
    <string name="blank_fragment_2">Blank Fragment 2</string>
    <string name="menu_setting">Setting</string>
    <string name="main_activity">Main Activity</string>
    <string name="authentication">Authentication</string>
    <string name="create">Create</string>
    <string name="get">Get</string>
    <string name="news">Sales</string>
    <string name="silahkan_mendaftar_untuk_dapat_mulai_menggunakan_aplikasi">Silahkan mendaftar untuk dapat mulai menggunakan aplikasi</string>
    <string name="foto_profil">Foto Profil</string>
    <string name="informasi_sales">Informasi Sales</string>
    <string name="informasi_admin">Informasi Admin</string>
    <string name="nama_sales">Nama Sales</string>
    <string name="nomor_hp_pemilik_contoh_0852xxxx">Nomor HP pemilik contoh: 0813xxxx</string>
    <string name="nomor_wa_pemilik_contoh_0852xxxx">Nomor Whatsapp pemilik contoh: 0813xxxx</string>
    <string name="nomor_hp_sales_contoh_0852xxxx">Nomor HP news contoh: 0813xxxx</string>
    <string name="nomor_wa_sales_contoh_0852xxxx">Nomor Whatsapp news contoh: 0813xxxx</string>
    <string name="nomor_hp_pemilik_contoh_0852xxxx_wajib">Nomor HP pemilik contoh: 0813xxxx*</string>
    <string name="nomor_wa_pemilik_contoh_0852xxxx_wajib">Nomor Whatsapp pemilik contoh: 0813xxxx*</string>
    <string name="nomor_hp_sales_contoh_0852xxxx_wajib">Nomor HP news contoh: 0813xxxx*</string>
    <string name="nomor_wa_sales_contoh_0852xxxx_wajib">Nomor Whatsapp news contoh: 0813xxxx*</string>
    <string name="nomor_hp_contoh_0852xxxx_wajib">Nomor HP contoh: 0813xxxx*</string>
    <string name="nomor_wa_contoh_0852xxxx_wajib">Nomor Whatsapp contoh: 0813xxxx*</string>
    <string name="nomor_hp_admin_contoh_0852xxxx">Nomor HP admin contoh: 0813xxxx</string>
    <string name="nomor_wa_admin_contoh_0852xxxx">Nomor Whatsapp admin contoh: 0813xxxx</string>
    <string name="pick_tanggal_lahir">Pilih Tanggal Lahir</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="kata_sandi">Kata Sandi</string>
    <string name="kata_sandi_confirm">Konfirmasi Kata Sandi</string>
    <string name="kata_sandi_confirm_wajib">Konfirmasi Kata Sandi</string>
    <string name="informasi_pemilik">Informasi Pemilik</string>
    <string name="email_sales">Email Sales</string>
    <string name="cluster">Cluster</string>
    <string name="cluster_wajib">Cluster</string>
    <string name="pick_tanggal_peresmian">Pilih Tanggal Peresmian Sales</string>
    <string name="pick_tanggal_kadaluarsa">Pilih Tanggal Kadaluarsa</string>
    <string name="gps">GPS</string>
    <string name="titik_lokasi">Titik Lokasi(Tekan GPS)</string>
    <string name="alamat_sales_lengkap">Alamat Sales(Jalan/Kompleks/Blok/DLL)</string>
    <string name="alamat_sales_lengkap_wajib">Alamat Sales(Jalan/Kompleks/Blok/DLL)</string>
    <string name="alamat_lengkap_wajib">Alamat(Jalan/Kompleks/Blok/DLL)</string>
    <string name="alamat_admin_lengkap">Alamat Admin(Jalan/Kompleks/Blok/DLL)</string>
    <string name="login_user">Login User</string>
    <string name="update_aplikasi">Update Aplikasi</string>
    <string name="welcome">Selamat Datang</string>
    <string name="username_nomor_hp_sales">Username / Nomor HP Sales</string>
    <string name="username_nomor_hp_pelanggan">Username / Nomor HP Pelanggan</string>
    <string name="username_nomor_mkios">Username / Nomor MKIOS</string>
    <string name="silahkan_login_untuk_melanjutkan">Silahkan login untuk melanjutkan</string>
    <string name="pengguna_baru">Pengguna Baru?</string>
    <string name="login_2">Login</string>
    <string name="ayo_mulai">Ayo Mulai!</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="edit_password">Edit Password</string>
    <string name="nilai_kami">Nilai Kami</string>
    <string name="kata_sandi_old">Kata Sandi Lama</string>
    <string name="kata_sandi_new">Kata Sandi Baru</string>
    <string name="kata_sandi_confirm_new">Konfirmasi Kata Sandi Baru</string>
    <string name="simpan">Simpan</string>
    <string name="ubah_password">Ubah Password</string>
    <string name="kami_akan_mengirimkan_kode_otp_ke_nomor_hp_sales_untuk_memverifikasi_akun_anda">Kami akan mengirimkan kode OTP ke nomor HP Sales untuk memverifikasi akun Anda</string>
    <string name="nama_admin">Nama Admin</string>
    <string name="email_admin">Email Admin</string>
    <string name="daftar">Daftar</string>
    <string name="menunggu_validasi">Menunggu Validasi</string>
    <string name="detail">Detail</string>
    <string name="titik_dua">:</string>
    <string name="alamat_sales">Alamat Sales</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="tanggal_peresmian">Tanggal Peresmian</string>
    <string name="regional">Regional</string>
    <string name="mines">-</string>
    <string name="plus">+</string>
    <string name="jumlah">Jumlah</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="clear">Clear</string>
    <string name="review">Review</string>
    <string name="date">Date</string>
    <string name="see_more">see more ...</string>
</resources>