<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/background"
    android:paddingTop="@dimen/h2"
    android:paddingStart="@dimen/h1"
    android:paddingEnd="@dimen/h1"
    android:background="@drawable/border_spinner_transparent"
    >
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textTitle"
        android:text="@string/jumlah"
        android:textColor="@color/black"
        android:textSize="@dimen/text_h1"
        android:fontFamily="@font/bauhaus"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/_40"
        android:layout_height="@dimen/_40"
        android:textColor="@color/red1"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/mines"
        android:background="@drawable/btn_circle_gray"
        android:id="@+id/decrement"
        android:layout_below="@+id/textTitle"
        android:fontFamily="@font/bauhaus"
        android:layout_marginBottom="@dimen/h2"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="@dimen/_70"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:background="@android:color/transparent"
        android:inputType="number"
        android:id="@+id/display"
        android:layout_toEndOf="@+id/decrement"
        android:layout_toStartOf="@+id/increment"
        android:layout_centerHorizontal="true"
        android:textAlignment="center"
        android:layout_below="@+id/textTitle"
        android:fontFamily="@font/bauhaus"
        android:layout_marginTop="@dimen/h1"
        android:layout_marginBottom="@dimen/h2"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="@dimen/_40"
        android:layout_height="@dimen/_40"
        android:textSize="30sp"
        android:textColor="@color/colorPrimary"
        android:text="@string/plus"
        android:background="@drawable/btn_circle_gray"
        android:id="@+id/increment"
        android:layout_below="@+id/textTitle"
        android:layout_alignParentEnd="true"
        android:fontFamily="@font/bauhaus"
        android:layout_marginBottom="@dimen/h2"
        />
</RelativeLayout>