<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:theme="@style/CustomTheme"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        app:cardCornerRadius="@dimen/h2"
        app:cardElevation="@dimen/h1"
        android:layout_margin="@dimen/h2"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/h2"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgFoto"
                android:layout_width="@dimen/margin_large"
                android:layout_height="@dimen/margin_large"
                android:layout_alignParentTop="true"
                android:scaleType="fitXY"
                android:src="@drawable/ic_logo"
                android:layout_centerVertical="true"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textNama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_h2"
                android:textStyle="bold"
                android:text="@string/nama"
                android:fontFamily="@font/bauhaus"
                android:layout_marginStart="@dimen/h2"
                android:layout_toEndOf="@+id/imgFoto"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_h1"
                android:text="@string/review"
                android:fontFamily="@font/bauhaus"
                android:layout_marginStart="@dimen/h2"
                android:layout_toEndOf="@+id/imgFoto"
                android:layout_below="@+id/textNama"
                android:lines="3"
                android:maxLines="3"
                android:ellipsize="end"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textSelengkapnya"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue1"
                android:textSize="@dimen/text_h1"
                android:text="@string/see_more"
                android:fontFamily="@font/bauhaus"
                android:layout_marginStart="@dimen/h2"
                android:layout_toEndOf="@+id/imgFoto"
                android:layout_below="@+id/textReview"
                android:lines="3"
                android:maxLines="3"
                android:ellipsize="end"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/text_h1"
                android:text="@string/date"
                android:fontFamily="@font/bauhaus"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_below="@+id/textReview"
                android:textAlignment="textEnd"
                />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>