<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="id.telkomsel.merchandise.ui.auth.verifyForgetPassword.VerifyForgetPasswordFragment"
    >
    <data>
        <variable
            name="viewModel"
            type="id.telkomsel.merchandise.ui.auth.verifyForgetPassword.VerifyForgetPasswordViewModel" />
    </data>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:theme="@style/CustomStyle"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            snackbar="@{viewModel.message}"
            android:theme="@style/CustomStyle"
            >

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/h4"
                android:layout_marginTop="@dimen/_30"
                android:background="@drawable/btn_circle_gray"
                android:src="@drawable/ic_back_black"
                android:onClick="@{()-> viewModel.onClickBack()}"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStandardWhite"
                android:textSize="@dimen/text_h4"
                android:textColor="@color/gray3"
                android:textStyle="bold"
                android:layout_below="@+id/imgBack"
                android:layout_marginTop="@dimen/text_h3"
                android:layout_marginBottom="@dimen/h3"
                android:layout_marginEnd="@dimen/_30"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:id="@+id/textVerify"
                android:text="@string/verifikasi_akun"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStandardWhite"
                android:textSize="@dimen/text_h3"
                android:layout_below="@+id/textVerify"
                android:layout_marginTop="@dimen/h3"
                android:layout_marginBottom="@dimen/h3"
                android:layout_marginEnd="@dimen/_30"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:id="@+id/textStatus"
                showTextStatus="@{viewModel.message}"
                android:fontFamily="@font/bauhaus"
                />

            <id.telkomsel.merchandise.services.timer.TimerView
                android:id="@+id/progressTimer"
                android:layout_width="@dimen/_200"
                android:layout_height="@dimen/_200"
                app:progressColor="@color/colorPrimary"
                app:backgroundColor="@color/white"
                app:progressBackgroundColor="@color/colorAccent"
                app:backgroundWidth="8"
                app:textSize="@dimen/text_h3"
                app:startingPoin="top"
                app:isClockwise="true"
                app:progressTextColor="@color/colorPrimary"
                android:layout_below="@+id/textStatus"
                android:layout_centerHorizontal="true"
                android:onClick="@{()-> viewModel.sendCode()}"
                disableButton="@{viewModel.loading}"
                />

            <include layout="@layout/progress_loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/progressTimer"
                android:visibility="gone"
                android:id="@+id/progress"
                visible="@{viewModel.isShowLoading}"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/textStandardWhite"
                android:textSize="@dimen/text_h3"
                android:layout_below="@+id/progress"
                android:layout_marginTop="@dimen/h3"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:text="@string/masukkan_kode"
                android:textColor="@color/gray3"
                android:id="@+id/textInput"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etOTP"
                android:layout_below="@+id/textInput"
                style="@style/customEditText"
                android:layout_width="@dimen/_200"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/h2"
                android:layout_marginTop="@dimen/h2"
                android:layout_marginEnd="@dimen/h2"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/error_appearance"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                >

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/textStandardWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textCapSentences"
                    android:maxLines="1"
                    android:text="@={viewModel.etOTP}"
                    android:textAlignment="center"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h3"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etOTP"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/h2"
                android:orientation="vertical">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ln_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_1"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/_1"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.setText(1)}"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_2"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/_2"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.setText(2)}"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_3"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/_3"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.setText(3)}"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ln_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ln_1"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_4"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/_4"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.setText(4)}"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_5"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/_5"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.setText(5)}"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_6"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/_6"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.setText(6)}"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ln_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ln_2"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_7"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/_7"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.setText(7)}"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_8"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/_8"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.setText(8)}"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_9"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/_9"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.setText(9)}"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/ln_4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/ln_3"
                    android:orientation="horizontal">

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_clear"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/clear"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.clearText()}"
                        />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_0"
                        android:layout_width="@dimen/_80"
                        android:layout_height="@dimen/_60"
                        android:layout_margin="@dimen/h2"
                        android:background="@drawable/border_round_full_hitam_putih"
                        android:elevation="@dimen/h1"
                        android:fontFamily="@font/monserrat_regular"
                        android:text="@string/_0"
                        android:textColor="@color/black"
                        android:textSize="@dimen/text_h5"
                        android:onClick="@{()-> viewModel.setText(0)}"
                        />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</layout>